--- a/composer.json
+++ b/composer.json
@@ -67,6 +67,7 @@
         }
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^3.38",
         "symfony/maker-bundle": "^1.51"
     }
 }
