--- a/composer.json
+++ b/composer.json
@@ -61,12 +61,13 @@
     },
     "extra": {
         "symfony": {
-            "allow-contrib": false,
+            "allow-contrib": true,
             "require": "6.3.*",
             "docker": true
         }
     },
     "require-dev": {
+        "phpstan/phpstan": "^1.10",
         "friendsofphp/php-cs-fixer": "^3.38",
         "symfony/maker-bundle": "^1.51"
     }
