--- a/fly.toml
+++ b/fly.toml
@@ -20,3 +20,10 @@ primary_region = "cdg"
   processes = ["app"]
   port = 80
   handlers = ["http"]
+
+[[services]]
+  internal_port = 8080
+  protocol = "tcp"
+  auto_stop_machines = true
+  auto_start_machines = true
+  min_machines_running = 0
