--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "nelmio/cors-bundle": "^2.3",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.24",
+        "easycorp/easyadmin-bundle": "^4.8",
         "runtime/frankenphp-symfony": "^0.1.1",
         "symfony/asset": "6.3.*",
         "symfony/console": "6.3.*",
