--- a/fly.toml
+++ b/fly.toml
@@ -1,4 +1,4 @@
-# fly.toml app configuration file generated for ri7-prospector on 2023-11-16T12:10:43+01:00
+# fly.toml app configuration file generated for ri7-prospector on 2023-11-16T14:32:09+01:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
@@ -9,12 +9,14 @@ primary_region = "cdg"
 [build]
   dockerfile = "Dockerfile"
 [env]
-  PORT = "80"
+  PORT = "8080"
 
 [http_service]
-  internal_port = 80
+  internal_port = 8080
   force_https = true
   auto_stop_machines = true
   auto_start_machines = true
   min_machines_running = 0
   processes = ["app"]
+  port = 80
+  handlers = ["http"]
