--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
         "symfony/validator": "6.3.*",
         "symfony/yaml": "6.3.*",
         "twig/extra-bundle": "^2.12|^3.0",
-        "twig/twig": "^2.0"
+        "twig/twig": "^v3.7.0"
     },
     "config": {
         "allow-plugins": {
