--- a/composer.json
+++ b/composer.json
@@ -87,6 +87,7 @@
         }
     },
     "require-dev": {
+        "doctrine/doctrine-fixtures-bundle": "^3.5",
         "friendsofphp/php-cs-fixer": "^3.38",
         "phpstan/phpstan": "^1.10",
         "phpunit/phpunit": "^10.4",
