--- a/composer.json
+++ b/composer.json
@@ -33,6 +33,7 @@
         "symfony/serializer": "6.3.*",
         "symfony/twig-bundle": "6.3.*",
         "symfony/validator": "6.3.*",
+        "symfony/var-dumper": "6.3.*",
         "symfony/yaml": "6.3.*",
         "symfonycasts/verify-email-bundle": "^1.14",
         "twig/extra-bundle": "^2.12|^3.0",
@@ -88,7 +89,7 @@
         }
     },
     "require-dev": {
-        "doctrine/doctrine-fixtures-bundle": "^3.5",
+        "doctrine/doctrine-fixtures-bundle": "*",
         "friendsofphp/php-cs-fixer": "^3.38",
         "phpstan/phpstan": "^1.10",
         "phpunit/phpunit": "^10.4",
