feat: #68 enable apiresource prospection on post method

--- a/compose.override.yaml
+++ b/compose.override.yaml
@@ -31,6 +31,7 @@ services:
 
 ###> symfony/mailer ###
   mailer:
+    container_name: ${PROJECT_NAME}-mailer
     image: schickling/mailcatcher
     ports: ["1025", "1080"]
 ###< symfony/mailer ###
