--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
+PROJECT_NAME=ri7-prospector
 # In all environments, the following files are loaded if they exist,
 # the latter taking precedence over the former:
 #
