--- a/composer.json
+++ b/composer.json
@@ -43,7 +43,8 @@
         "allow-plugins": {
             "php-http/discovery": true,
             "symfony/flex": true,
-            "symfony/runtime": true
+            "symfony/runtime": true,
+            "phpstan/extension-installer": true
         },
         "sort-packages": true
     },
@@ -89,12 +90,18 @@
         }
     },
     "require-dev": {
+        "brianium/paratest": "^7.3",
         "doctrine/doctrine-fixtures-bundle": "*",
         "friendsofphp/php-cs-fixer": "^3.38",
+        "phpstan/extension-installer": "^1.3",
         "phpstan/phpstan": "^1.10",
+        "phpstan/phpstan-doctrine": "^1.3",
+        "phpstan/phpstan-phpunit": "^1.3",
+        "phpstan/phpstan-symfony": "^1.3",
         "phpunit/phpunit": "^10.4",
         "symfony/browser-kit": "6.3.*",
         "symfony/css-selector": "6.3.*",
+        "symfony/http-client": "6.3.*",
         "symfony/maker-bundle": "^1.51",
         "symfony/phpunit-bridge": "^6.3"
     }
