--- a/phpstan.dist.neon
+++ b/phpstan.dist.neon
@@ -1,8 +1,17 @@
 parameters:
     level: max
+    treatPhpDocTypesAsCertain: false
     paths:
         - bin/
         - config/
         - public/
         - src/
         - tests/
+
+    symfony:
+        container_xml_path: var/cache/dev/App_KernelDevDebugContainer.xml
+
+    excludePaths:
+        - src/Kernel.php
+
+    checkGenericClassInNonGenericObjectType: false
