--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,9 +39,9 @@ jobs:
       - name: Check HTTPS reachability
         run: curl -vk -o /dev/null https://localhost
       - name: Run PHPStan
-        run: docker compose exec -T php vendor/bin/phpstan analyse --level max
+        run: make stan
       - name: Run PHPCs-fixer
-        run: docker compose exec -T php vendor/bin/php-cs-fixer fix
+        run: make cs-fix
       - name: Create test database
         if: false # Remove this line if Doctrine ORM is installed
         run: docker compose exec -T php bin/console -e test doctrine:database:create
