--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,4 +1,4 @@
-name: CI
+name: Build & Push Docker Image
 
 on:
     push:
@@ -6,29 +6,61 @@ on:
             - main
         tags: '*'
 
-jobs:
+jobs:    
+    lint:
+        name: Docker Lint
+        runs-on: ubuntu-latest
+        steps:
+            -   
+                name: Checkout
+                uses: actions/checkout@v4
+            -   
+                name: Lint Dockerfile
+                uses: hadolint/hadolint-action@v3.1.0
+
     build:
         name: Docker build & push image
         runs-on: ubuntu-latest
         steps:
-            -   name: Checkout
+            -   
+                name: Checkout
                 uses: actions/checkout@v3
-            -   name: Set env
+            -   
+                name: Set env
                 run: echo "REPOSITORY_NAME=${{ github.event.repository.full_name }}" | sed 's/\//-/' >> $GITHUB_ENV
-            -   name: Login to Docker Hub
+            -
+                name: Set up Docker Buildx
+                uses: docker/setup-buildx-action@v3
+            -   
+                name: Login to Docker Hub
                 uses: docker/login-action@v3
                 with:
                     username: ${{ secrets.DOCKERHUB_USERNAME }}
                     password: ${{ secrets.DOCKERHUB_TOKEN }}
-            -   name: Build and push Docker image
+            -   
+                name: Build and push Docker image
                 if: github.ref == 'refs/heads/main'
-                uses: docker/build-push-action@v4
+                uses: docker/build-push-action@v5
                 with:
+                    target: frankenphp_prod
                     push: true
                     tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{env.REPOSITORY_NAME}}:latest
-            -   name: Build and push Docker image
+            -   
+                name: Build and push Docker image
                 if: github.ref == 'refs/tags/*'
-                uses: docker/build-push-action@v4
+                uses: docker/build-push-action@v5
                 with:
+                    target: frankenphp_prod
                     push: true
                     tags: ${{ secrets.DOCKERHUB_USERNAME }}/${{env.REPOSITORY_NAME}}:${{github.ref}}
+    
+    deploy:
+        name: Deploy to Fly
+        runs-on: ubuntu-latest
+        steps:
+            - name: Checkout
+              uses: actions/checkout@v4
+            - uses: superfly/flyctl-actions/setup-flyctl@master
+            - run: flyctl deploy --remote-only
+              env:
+                  FLY_API_TOKEN: ${{ secrets.FLY_API_TOKEN }}
