--- a/composer.json
+++ b/composer.json
@@ -15,10 +15,12 @@
         "doctrine/orm": "^2.17",
         "easycorp/easyadmin-bundle": "^4.8",
         "fakerphp/faker": "^1.23",
+        "gedmo/doctrine-extensions": "*",
         "nelmio/cors-bundle": "^2.3",
         "phpdocumentor/reflection-docblock": "^5.3",
         "phpstan/phpdoc-parser": "^1.24",
         "runtime/frankenphp-symfony": "^0.1.1",
+        "stof/doctrine-extensions-bundle": "^1.9",
         "symfony/asset": "6.3.*",
         "symfony/console": "6.3.*",
         "symfony/dotenv": "6.3.*",
