--- a/.editorconfig
+++ b/.editorconfig
@@ -36,6 +36,7 @@ trim_trailing_whitespace = false
 
 [.github/workflows/*.yml]
 indent_size = 2
+indent_style = space
 
 [.gitmodules]
 indent_style = tab
