--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     "minimum-stability": "stable",
     "prefer-stable": true,
     "require": {
-        "php": ">=8.2",
+        "php": ">=8.3",
         "ext-ctype": "*",
         "ext-iconv": "*",
         "api-platform/core": "^3.2",
@@ -18,7 +18,6 @@
         "gedmo/doctrine-extensions": "*",
         "nelmio/cors-bundle": "^2.3",
         "phpdocumentor/reflection-docblock": "^5.3",
-        "phpstan/phpdoc-parser": "^1.24",
         "runtime/frankenphp-symfony": "^0.1.1",
         "stof/doctrine-extensions-bundle": "^1.9",
         "symfony/asset": "6.3.*",
@@ -100,11 +99,12 @@
         "phpstan/phpstan-doctrine": "^1.3",
         "phpstan/phpstan-phpunit": "^1.3",
         "phpstan/phpstan-symfony": "^1.3",
+        "phpstan/phpdoc-parser": "^1.24",
         "phpunit/phpunit": "^10.4",
         "symfony/browser-kit": "6.3.*",
         "symfony/css-selector": "6.3.*",
         "symfony/http-client": "6.3.*",
         "symfony/maker-bundle": "^1.51",
-        "symfony/phpunit-bridge": "^6.3"
+        "symfony/phpunit-bridge": "6.3.*"
     }
 }
