feat: #144 make composer update on github action shedule

--- a/.github/workflows/composer-update.yml
+++ b/.github/workflows/composer-update.yml
@@ -1,7 +1,9 @@
 name: Composer update
 
 on:
-  pull_request:  ~
+  push: 
+    branches:
+      - '**'
   schedule:
     - cron: '0 0 * * *' #UTC
 
