--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "doctrine/orm": "^2.17",
         "easycorp/easyadmin-bundle": "^4.8",
         "fakerphp/faker": "^1.23",
+        "friendsofsymfony/jsrouting-bundle": "^3.3",
         "gedmo/doctrine-extensions": "*",
         "nelmio/cors-bundle": "^2.3",
         "phpdocumentor/reflection-docblock": "^5.3",
