feat: #129 add error page 404 500

--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -11,7 +11,7 @@ security:
                 property: email
     firewalls:
         dev:
-            pattern: ^/(_(profiler|wdt)|css|images|js)/
+            pattern: ^/(_(error|profiler|wdt)|css|images|js)/
             security: false
         main:
             lazy: true
