--- a/composer.json
+++ b/composer.json
@@ -28,6 +28,7 @@
         "symfony/flex": "^2",
         "symfony/framework-bundle": "6.3.*",
         "symfony/mailer": "6.3.*",
+        "symfony/monolog-bundle": "^3.0",
         "symfony/property-access": "6.3.*",
         "symfony/property-info": "6.3.*",
         "symfony/runtime": "6.3.*",
@@ -96,16 +97,19 @@
         "doctrine/doctrine-fixtures-bundle": "*",
         "friendsofphp/php-cs-fixer": "^3.38",
         "phpstan/extension-installer": "^1.3",
+        "phpstan/phpdoc-parser": "^1.24",
         "phpstan/phpstan": "^1.10",
         "phpstan/phpstan-doctrine": "^1.3",
         "phpstan/phpstan-phpunit": "^1.3",
         "phpstan/phpstan-symfony": "^1.3",
-        "phpstan/phpdoc-parser": "^1.24",
         "phpunit/phpunit": "^10.4",
         "symfony/browser-kit": "6.3.*",
         "symfony/css-selector": "6.3.*",
+        "symfony/debug-bundle": "6.3.*",
         "symfony/http-client": "6.3.*",
         "symfony/maker-bundle": "^1.51",
-        "symfony/phpunit-bridge": "6.3.*"
+        "symfony/phpunit-bridge": "6.3.*",
+        "symfony/stopwatch": "6.3.*",
+        "symfony/web-profiler-bundle": "6.3.*"
     }
 }
