--- a/composer.json
+++ b/composer.json
@@ -94,6 +94,7 @@
     },
     "require-dev": {
         "brianium/paratest": "^7.3",
+        "dama/doctrine-test-bundle": "^8.0",
         "doctrine/doctrine-fixtures-bundle": "*",
         "friendsofphp/php-cs-fixer": "^3.38",
         "phpstan/extension-installer": "^1.3",
