--- a/config/packages/doctrine.yaml
+++ b/config/packages/doctrine.yaml
@@ -26,7 +26,10 @@ when@test:
     doctrine:
         dbal:
             # "TEST_TOKEN" is typically set by ParaTest
-            url: 'sqlite:///%kernel.project_dir%/var/test%env(default::TEST_TOKEN)%.db'
+            connections:
+                default:
+                    use_savepoints: true
+                    url: 'sqlite:///%kernel.project_dir%/var/test%env(default::TEST_TOKEN)%.db'
 
 when@prod:
     doctrine:
