--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
         "symfony/security-bundle": "6.4.*",
         "symfony/serializer": "6.4.*",
         "symfony/twig-bundle": "6.4.*",
+        "symfony/ux-twig-component": "^2.13",
         "symfony/validator": "6.4.*",
         "symfony/var-dumper": "6.4.*",
         "symfony/yaml": "6.4.*",
