--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
     }
   },
   "routes": [
-    { "src": "/(.*)",  "dest": "/public/index.php" }
+    { "src": "/(.*)",  "dest": "/api/index.php" }
   ],
   "env": {
     "APP_ENV": "dev",
