--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,11 @@
 {
   "functions": {
-    "public/index.php": {
+    "api/index.php": {
       "runtime": "vercel-php@0.6.0"
     }
   },
   "routes": [
-    { "src": "/(.*)",  "dest": "/public/index.php" }
+    { "src": "/(.*)",  "dest": "/api/index.php" }
   ],
   "env": {
     "APP_ENV": "dev",
