build: #173 use vercel app to deploy

--- a/vercel.json
+++ b/vercel.json
@@ -8,7 +8,7 @@
     { "src": "/(.*)",  "dest": "/api/index.php" }
   ],
   "env": {
-    "APP_ENV": "dev",
+    "APP_ENV": "prod",
     "APP_SECRET": "6f71aad5435fe6e70b4481ffw8b1c3d2c2b6bec"
   }
 }
