build: #173 use vercel app to deploy

--- a/vercel.json
+++ b/vercel.json
@@ -11,5 +11,5 @@
     "APP_ENV": "prod",
     "APP_SECRET": "6f71aad5435fe6e70b4481ffw8b1c3d2c2b6bec"
   },
-  "buildCommand": "composer install --prefer-dist --optimize-autoloader --no-interaction"
+  "buildCommand": "chmod -R 777 ./var"
 }
